src/snapshots/clight__parser__tests__empty_decl.snap
---
source: src/parser.rs
expression: result
snapshot_kind: text
---
Err(
    MietteDiagnostic {
        message: "Expected a declaration, got: 'eof'",
        code: None,
        severity: None,
        help: None,
        url: None,
        labels: Some(
            [
                LabeledSpan {
                    label: Some(
                        "here",
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: 0,
                    },
                    primary: false,
                },
            ],
        ),
    },
)
