src/snapshots/clight__parser__tests__invalid_decl_start.snap
---
source: src/parser.rs
expression: result
snapshot_kind: text
---
Err(
    MietteDiagnostic {
        message: "Expected a declaration, got: 'void'",
        code: None,
        severity: None,
        help: None,
        url: None,
        labels: Some(
            [
                LabeledSpan {
                    label: Some(
                        "here",
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: 4,
                    },
                    primary: false,
                },
            ],
        ),
    },
)
